--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "element-plus": "^2.4.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-recaptcha": "^3.0.0-alpha.6",
+    "vue-recaptcha-v3": "^2.0.1",
+    "vue-router": "^4.2.5",
+    "vue3-recaptcha2": "^1.8.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
