--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.5.1",
     "element-plus": "^2.4.1",
     "pinia": "^2.1.7",
+    "recaptcha2": "^1.3.3",
     "vue": "^3.3.4",
     "vue-recaptcha": "^3.0.0-alpha.6",
     "vue-recaptcha-v3": "^2.0.1",
