--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.5.1",
     "element-plus": "^2.4.1",
     "pinia": "^2.1.7",
