--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.5.1",
     "element-plus": "^2.4.1",
+    "moment": "^2.29.4",
     "pinia": "^2.1.7",
     "recaptcha2": "^1.3.3",
     "vue": "^3.3.4",
